--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="description" content="Marketmind is a web app that helps you gain an edge with the market" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" href="/src/assets/logo.png">
   <link rel="manifest" href="/site.webmanifest">
   <title>Marketmind</title>
 </head>
